[package]
name = "bittorrent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# HTTP client for tracker communication
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# Hashing
sha1 = "0.10"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Byte manipulation
bytes = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
